what changes are added it related with the error representation for the same user signup card design correction and image size recheck and handling the deleted comments

--- a/Views/homepage.ejs
+++ b/Views/homepage.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <%- include('./particles/navbar') %>
-        <div class="container mt-3">
+        <div class="container mt-3 mb-5">
             <% if (!locals.blog || locals.blog.length===0) { %>
                 <h1>No Blogs Created Yet.</h1>
                 <% } else { %>
