--- a/Views/my_blogs.ejs
+++ b/Views/my_blogs.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <%- include('./particles/navbar') %>
-        <div class="container mt-3">
+        <div class="container mt-3 mb-5">
             <% if (!locals.blog || locals.blog.length===0) { %>
                 <h1>No Blogs Created Yet.</h1>
                 <% } else { %>
