--- a/Views/particles/fonts.ejs
+++ b/Views/particles/fonts.ejs
@@ -134,10 +134,12 @@
     }
 
     .blog-image {
-        max-width: 100%;
+        max-width: 100%; 
         height: auto;
         display: block;
-        margin: 0 auto;
+        margin: 0 auto; 
+        max-height: 400px;
+        object-fit: cover;
     }
 
     /* Blog body styling */
